2011-11-22  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/51196
	* typeck.c (cp_build_binary_op, [case EQ_EXPR]): For targets having
	TARGET_PTRMEMFUNC_VBIT_LOCATION == ptrmemfunc_vbit_in_delta, do here
	the -Wzero-as-null-pointer-constant warning for pmf == 0.

2011-11-21  Torvald Riegel  <triegel@redhat.com>

	* pt.c (tsubst_copy_and_build): Handle TRANSACTION_EXPR.

2011-11-21  Ed Smith-Rowland  <3dw4rd@verizon.net>

	PR c++/50958
	* parser.c (lookup_literal_operator): New.
	(cp_parser_userdef_char_literal): Use it.
	(cp_parser_userdef_numeric_literal): Use it.
	(cp_parser_userdef_string_literal): Use lookup_name.

2011-11-20  Jason Merrill  <jason@redhat.com>

	* pt.c (tsubst_pack_expansion): Fix SFINAE.

	PR c++/48322
	* cp-tree.h (PACK_EXPANSION_EXTRA_ARGS): New.
	* cp-tree.def (EXPR_PACK_EXPANSION): Add an operand for it.
	* pt.c (tsubst_pack_expansion): Set and use it.
	(iterative_hash_template_arg): Hash it.
	(template_args_equal): Compare it.
	(comp_template_args_with_info): Handle nulls.
	* tree.c (cp_walk_subtrees): Walk it.
	* typeck.c (structural_comptypes): Compare it.
	* ptree.c (cxx_print_type): Print it.

	* pt.c (type_unification_real): Set input_location
	during default arg instantiation.

2011-11-20  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/51230
	* pt.c (unify_inconsistency): Handle non-type parameters better.
	* error.c (dump_expr): Handle TEMPLATE_TEMPLATE_PARM.

2011-11-20  Dodji Seketeli  <dodji@redhat.com>

	PR c++/51194
	* pt.c (lookup_template_class_1): Go out early if the type of the
	template is error_mark_node.

2011-11-19  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/51216
	* semantics.c (potential_constant_expression_1): Handle IF_STMT,
	DO_STMT, FOR_STMT, and WHILE_STMT.

2011-11-18  Fabien Chêne  <fabien@gcc.gnu.org>

	PR c++/51188
	* search.c (lookup_field_1): Handle USING_DECLs for the storted
	case.

2011-11-18  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/51150