@@ -1,3 +1,9 @@
+2011-11-22  Dodji Seketeli  <dodji@redhat.com>
+
+	PR c++/51143
+	* parser.c (cp_parser_alias_declaration): Don't allow type
+	definition in templates.
+
 2011-11-22  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/51196
